--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ li a:hover{
 
 .slider{
     width: 100%;
-    background-image: url("./../images/architect.jpg");
+    background-image: url("./Images/architect.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -252,7 +252,7 @@ h3{
 
     .slider{
         width: 100%;
-        background-image: url("./../images/architect.jpg");
+        background-image: url("./Images/architect.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
